Fix spacing on update button.

--- a/dash-ocean-optics-stylesheet.css
+++ b/dash-ocean-optics-stylesheet.css
@@ -102,7 +102,8 @@
     text-align: center;
     height: 50px;
     width: 125px;
-    margin-bottom: 25px;
+    margin-top: 25px;
+    margin-bottom: 10px;
     background-color: #2222ff;
     position: static;
     border-width: 1px;
